# synapse-core

./: .gitignore  Cargo.toml  LICENSE  README.md
apps/desktop-gui/: .env.development  .gitignore  MOBILE_BUILD.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop-gui/src/: App.vue
apps/desktop-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-gui/src-tauri/capabilities/: default.json
apps/desktop-gui/src-tauri/icons/: gen_icons.py
apps/desktop-gui/src-tauri/src/: main.rs
apps/desktop-gui/src/api/: adapter.ts  auth.ts  index.ts
apps/desktop-gui/src/assets/: main.css
apps/desktop-gui/src/components/: AppHeader.vue  AppSidebar.vue  DataList.vue  LoadingSpinner.vue  SearchBar.vue  StatsCard.vue  StatusMessage.vue
apps/desktop-gui/src/router/: index.ts
apps/desktop-gui/src/types/: index.ts
apps/desktop-gui/src/views/: DashboardView.vue  DataCreateView.vue  DataDetailView.vue  DataView.vue  MessagesView.vue  SettingsView.vue  SharesView.vue
crates/agent_interface/: Cargo.toml
crates/agent_interface/src/: agent_service.rs  cli.rs  error.rs  lib.rs  mcp.rs  tools.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/data_core/: Cargo.toml
crates/data_core/src/: crypto.rs  entity.rs  error.rs  lib.rs  metadata.rs
crates/iam_core/: Cargo.toml
crates/iam_core/src/: auth.rs  error.rs  jwt.rs  lib.rs  rbac.rs
crates/messaging_service/: Cargo.toml
crates/messaging_service/src/: error.rs  lib.rs  message.rs  notification.rs
crates/search_indexer/: Cargo.toml
crates/search_indexer/src/: error.rs  indexer.rs  lib.rs  query.rs
crates/storage_backends/: Cargo.toml
crates/storage_backends/examples/: s3_test.rs
crates/storage_backends/src/: error.rs  lib.rs  local.rs  opendal_backend.rs  oss.rs  r2.rs  s3.rs  trait_def.rs  webdav.rs
crates/synapse-connect/: Cargo.toml
crates/synapse-connect/src/: lib.rs  local.rs  provider.rs  registry.rs  webdav.rs
crates/synapse-connect/tests/: provider_tests.rs
crates/synapse_service/: Cargo.toml
crates/synapse_service/src/: error.rs  lib.rs  pipeline.rs  sharing.rs
crates/sync_engine/: Cargo.toml
crates/sync_engine/src/: conflict.rs  error.rs  lib.rs  sync.rs
crates/web_server/: Cargo.toml
crates/web_server/src/: main.rs
docs/: architecture.md
examples/: advanced_usage.rs  basic_usage.rs
src/: lib.rs
