[workspace]
members = [
    "crates/data_core",
    "crates/iam_core",
    "crates/storage_backends",
    "crates/sync_engine",
    "crates/search_indexer",
    "crates/agent_interface",
    "crates/messaging_service",
    "crates/synapse_service",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ialer"]
description = "SynapseCore - 高性能跨平台数据管理系统"
license = "MIT"

[workspace.dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# 安全加密
ring = "0.17"

# 工具库
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# 本地开发路径
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
