[package]
name = "synapse-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SynapseCore - 高性能跨平台数据管理系统"
license.workspace = true

[dependencies]
# Internal crates
synapse_service = { path = "crates/synapse_service" }
data_core = { path = "crates/data_core" }
iam_core = { path = "crates/iam_core" }
storage_backends = { path = "crates/storage_backends" }
search_indexer = { path = "crates/search_indexer" }
messaging_service = { path = "crates/messaging_service" }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"

[workspace]
members = [
    "crates/data_core",
    "crates/iam_core",
    "crates/storage_backends",
    "crates/sync_engine",
    "crates/search_indexer",
    "crates/agent_interface",
    "crates/messaging_service",
    "crates/synapse_service",
    "crates/synapse-connect",
    "crates/web_server",
]
exclude = [
    "apps/desktop-gui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ialer"]
description = "SynapseCore - 高性能跨平台数据管理系统"
license = "MIT"

[workspace.dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# 安全加密
ring = "0.17"

# 工具库
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# 本地开发路径
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
