[package]
name = "synapse-cli"
version.workspace = true
edition.workspace = true
description = "SynapseCore 命令行管理工具"

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
synapse_service = { path = "../synapse_service" }
data_core = { path = "../data_core" }
serde_json = "1.0"
anyhow = { workspace = true }
