[package]
name = "search_indexer"
version.workspace = true
edition.workspace = true
description = "搜索索引模块 - 全文搜索与分类检索"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
storage_backends = { path = "../storage_backends" }
