[package]
name = "storage_backends"
version.workspace = true
edition.workspace = true
description = "存储后端模块 - 本地与云端存储"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
