[package]
name = "sync_engine"
version.workspace = true
edition.workspace = true
description = "同步引擎模块 - 多设备数据同步"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
storage_backends = { path = "../storage_backends" }
