[package]
name = "synapse-web"
version = "0.1.0"
edition = "2021"
description = "SynapseCore Web Server - REST API for browser access"

[[bin]]
name = "synapse-web"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Internal crates
synapse_service = { path = "../synapse_service" }
data_core = { path = "../data_core" }
