[package]
name = "synapse-desktop"
version = "0.1.0"
edition = "2021"
description = "SynapseCore 桌面端应用"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "1.5", features = ["shell-open"] }
synapse_service = { path = "../../crates/synapse_service" }
data_core = { path = "../../crates/data_core" }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
