[package]
name = "synapse-desktop"
version = "0.1.0"
edition = "2021"
description = "SynapseCore 桌面端应用"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "2", features = [] }
synapse_service = { path = "../../../crates/synapse_service" }
data_core = { path = "../../../crates/data_core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.release-mobile]
inherits = "release"
opt-level = "s"
strip = true

[profile.release-mobile-android]
inherits = "release-mobile"
target = "aarch64-linux-android"

[profile.release-mobile-ios]
inherits = "release-mobile"
target = "aarch64-apple-ios"
